--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,17 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: darkblue;
+  background-color: rgb(0, 0, 0);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header a {
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
-button {
-  color: white;
+ button {
+  color: rgb(2, 0, 0);
   display: inline-block;
   padding: 12px 24px;
   font-weight: bold;
@@ -26,12 +26,12 @@ button {
   transition: background-color 0.3s ease;
 }
 
-button:hover {
+.header button:hover {
   padding: 10px 20px;
   transition: transform 0.2s ease-in-out;
 }
 
 h1 {
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
