--- a/src/components/TransactionEditForm.css
+++ b/src/components/TransactionEditForm.css
@@ -1,6 +1,9 @@
 form {
     max-width: 600px;
     margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    padding-top: 5%;
     padding-right: 40px;
     padding-bottom: 30px;
     padding-left: 20px;
@@ -29,16 +32,41 @@ input[type="number"] {
 }
 
 input[type="submit"] {
-    display: inline-block;
+    
     padding: 10px 20px;
-    background-color: #337ab7;
     color: #fff;
-    border: none;
+    border: 2px solid white;
     border-radius: 3px;
     cursor: pointer;
     font-size: 16px;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0);
 }
 
 input[type="submit"]:hover {
     background-color: #23527c;
 }
+
+.submit {
+ width: 33%; 
+ margin-top: 10%;
+margin-left: 50%;
+
+}
+
+.submit:hover{
+    background-color: rgb(107, 207, 134);
+}
+/* .button_box button {
+    
+   
+  }
+  
+  .button_box button:hover {
+    background-color: rgb(107, 207, 134);
+    color: white;
+  }
+  
+  .button_box button a{
+      color: white; 
+  } */
