--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -27,3 +27,13 @@ section {
     width: 60%;
     margin: auto;
 }
+
+.transactions h1{
+  color: black;
+}
+
+.total {
+  margin-left: 40%;
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
